<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/password"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/password"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="96dp"
                android:ems="10"
                android:hint="Username"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/type_password_here"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/password_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/password"
                android:layout_alignLeft="@+id/password"
                android:layout_alignRight="@+id/password"
                android:layout_alignStart="@+id/password"
                android:layout_below="@+id/password"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/account_createbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_confirmation"
                android:layout_centerHorizontal="true"
                android:onClick="onCreateBtnClick"
                android:text="@string/create_my_account"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>