<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">
            <TextView
                android:text="@string/name_of_lecture"
                android:textSize="30sp"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lecture_header" />

            <EditText
                android:id="@+id/nametxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/courseIDHint"
                android:inputType="textCapCharacters|textCapWords|textCapSentences"
                android:maxLength="12"
                android:textSize="30sp" />

            <TextView
                android:text="@string/room_for_lecture"
                android:textSize="30sp"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/room_header" />

            <EditText
                android:id="@+id/roomtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/write_roomnumber_here"
                android:inputType="textCapWords"
                android:maxLength="12"
                android:textSize="30sp" />

            <Button
                android:id="@+id/datebtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/set_lecture_date" />

            <Button
                android:id="@+id/startbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/set_start_time" />

            <Button
                android:id="@+id/endbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/set_end_time" />

            <Button
                android:id="@+id/subjectBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addSubjectClick"
                android:text="Add/Edit Subjects" />

            <Button
                android:text="@string/done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/donebtn" />

            <Button
                android:id="@+id/cancelbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />
        </LinearLayout>
    </ScrollView>



</LinearLayout>